<resources>
    <string name="app_name">E客校园</string>

    <string name="login_tip">请输入学号、密码和验证码：</string>
    <string name="login_id">学号</string>
    <string name="login_password">密码</string>
    <string name="login_code">验证码</string>
    <string name="login_submit">登录</string>
    <string name="codeTip">点击左侧更新验证码~</string>
    <string name="remember_pas_switch">记住密码</string>
    <string name="get_now_score">查询当前学期成绩(不选中则查询上学期成绩)</string>
    <string name="get_pass_score">查询上学期成绩</string>

    <string name="buttons_navigation_search">教务</string>
    <string name="buttons_navigation_choose">选课</string>
    <string name="buttons_navigation_school">校园</string>
    <string name="buttons_navigation_me">个人</string>

    <string name="drawer_search_title">教务助手</string>
    <string name="drawer_search_class">课程表</string>
    <string name="drawer_search_exam">考试时间</string>
    <string name="drawer_search_score">考试成绩</string>

    <string name="drawer_school_title">校园生活</string>
    <string name="drawer_school_task">任务活动</string>
    <string name="drawer_school_library">图书馆座位预定</string>
    <string name="drawer_school_lostPorerity">失物招领</string>

    <string name="drawer_choose_title">选课</string>
    <string name="drawer_choose_chosen">已选课程</string>
    <string name="drawer_choose_state">概况</string>
    <string name="drawer_choose_public">公选课</string>
    <string name="drawer_choose_recommend">推荐选课</string>
    <string name="drawer_choose_sports">体育课</string>

    <string name="drawer_me_title">个人</string>
    <string name="drawer_me_account">个人信息</string>
    <string name="drawer_me_login">更新数据</string>

    <string name="base_info">个人信息</string>
    <string name="now_state">选课开放情况</string>
    <string name="chosen_count">已选课程统计</string>

    <string name="drawer_info">关于</string>

    <string name="choose_not_time">现在还没开放选课呢qwq</string>

    <string name="score_title">课程名</string>
    <string name="score_number">成绩</string>
    <string name="score_credit">学分</string>

    <string name="time">上课时间及地点：</string>
    <string name="credit">学分：</string>
    <string name="hours">学时：</string>
    <string name="choose">选课</string>
    <string name="now">当前选课人数：</string>
    <string name="limit">课堂容量：</string>

    <string name="lost_title">丢失物品名</string>
    <string name="lost_phone">您的手机号</string>
    <string name="lost_description">丢失物品描述</string>
    <string name="lost_photo">丢失物品照片</string>
    <string name="lost_take_photo">拍照上传</string>
    <string name="lost_pick_photo">从相册中上传</string>
    <string name="lost_no_photo">无照片</string>
    <string name="lost_lost">我要找失物</string>
    <string name="lost_found">我要找失主</string>
    <string name="lost_submit">提交</string>

    <string name="lost_property_lost">【失物】</string>
    <string name="lost_property_found">【招领】</string>
    <string name="lost_property_delete">删除</string>


</resources>
