<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group>
        <item
            android:title="@string/drawer_choose_title">
            <menu>
                <item
                    android:checked="true"
                    android:id="@+id/choosingState"
                    android:icon="@drawable/ic_clipboard_text_white_24dp"
                    android:title="@string/drawer_choose_state" />
                <item
                    android:id="@+id/chosenClass"
                    android:icon="@drawable/checkbox_marked"
                    android:title="@string/drawer_choose_chosen"/>
                <item
                    android:id="@+id/recommendClass"
                    android:icon="@drawable/library_books"
                    android:title="@string/drawer_choose_recommend"/>
                <item
                    android:id="@+id/sportsClass"
                    android:icon="@drawable/run"
                    android:title="@string/drawer_choose_sports"/>
                <item
                    android:id="@+id/publicClass"
                    android:icon="@drawable/checkbox_marked"
                    android:title="@string/drawer_choose_public"/>
            </menu>
        </item>
    </group>
    <group>
        <item
            android:title="@string/drawer_info"
            android:id="@+id/infoChoose"
            android:icon="@drawable/information"
            />
    </group>

</menu>