<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:height="120dp"
                android:textSize="16sp"
                android:textColor="@color/white"
                android:gravity="bottom"
                android:padding="16dp"
                android:background="@color/colorPrimary"
                android:text="@string/login_tip"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">


                <android.support.design.widget.TextInputLayout
                    android:id="@+id/id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/login_id"
                        android:inputType="number"
                        android:maxLines="1" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/login_password"
                        android:inputType="textPassword"
                        android:maxLines="1" />
                </android.support.design.widget.TextInputLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/inputCodes"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:minWidth="128dp">

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/login_code"
                            android:inputType="text"
                            android:maxLines="1" />
                    </android.support.design.widget.TextInputLayout>

                    <ImageView
                        android:id="@+id/codes"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:scaleType="fitCenter"
                        android:padding="10dp"
                        android:layout_margin="10dp"
                        android:minWidth="80dp"
                        android:background="#fff" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="12sp"
                        android:layout_gravity="bottom"
                        android:text="@string/codeTip"/>
                </LinearLayout>

                <android.support.v7.widget.SwitchCompat
                    android:text="@string/get_now_score"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/isGetNowScore"/>

                <android.support.v7.widget.SwitchCompat
                    android:text="@string/remember_pas_switch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/rememberPassword"/>

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/submitLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/login_submit" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>



</android.support.design.widget.CoordinatorLayout>