<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:toolbar="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.wangh.e_university.LostActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBarOfClassInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbarOfLost"
            toolbar:titleTextColor="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="56dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/lostTitle">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/lost_title" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/lostPhone">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:hint="@string/lost_phone" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/lostDescription">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"
                    android:hint="@string/lost_description" />
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:text="@string/lost_photo" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/lostTakePhoto"
                    android:elevation="0dp"
                    style="?android:attr/borderlessButtonStyle"
                    android:background="#fafafa"
                    android:textColorHint="@color/colorAccent"
                    android:hint="@string/lost_take_photo" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:elevation="0dp"
                    style="?android:attr/borderlessButtonStyle"
                    android:id="@+id/lostPickPhoto"
                    android:background="#fafafa"
                    android:textColorHint="@color/colorAccent"
                    android:hint="@string/lost_pick_photo" />
            </LinearLayout>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:scaleType="fitStart"
                android:id="@+id/lostPhoto" />

            <Switch
                android:id="@+id/lostOrFound"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/lost_lost"
                android:textColorHint="#111" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:elevation="0dp"
                style="?android:attr/borderlessButtonStyle"
                android:background="#fafafa"
                android:textColorHint="@color/colorAccent"
                android:id="@+id/lostSubmit"
                android:hint="@string/lost_submit" />

        </LinearLayout>
    </ScrollView>

</android.support.design.widget.CoordinatorLayout>
